get-markets handler was added
